--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,9 +23,17 @@ body {
   font-family: var(--font-sans), Arial, Helvetica, sans-serif;
 }
 
-
 .markdown-content p {
   margin: 0 0 .5rem;
+}
+
+.markdown-content p a {
+  color: var(--color-violet-400);
+}
+
+.markdown-content p a:hover,
+.markdown-content p a:focus {
+  color: var(--color-violet-500);
 }
 
 .markdown-content h2 {
@@ -40,4 +48,13 @@ body {
   margin-bottom: .5rem;
   font-size: 1.15rem;
   font-weight: 600;
+}
+
+.markdown-content img {
+  display: block;
+  max-width: 50%;
+  max-height: 25rem;
+  margin: 2rem auto;
+  border: 1px solid #fff;
+  border-radius: var(--radius-md);
 }
